# src/server.ts
@@ -30,6 +30,7 @@ import enumRoutes from "./routes/enumRoutes";
 import sellerRoutes from "./routes/sellerRoutes";
 import incomeRoutes from "./routes/incomeRoutes";
 import expenseRoutes from "./routes/expenseRoutes";
+import employeeRoutes from "./routes/employeeRoutes";
 
 dotenv.config();
 
@@ -168,6 +169,7 @@ app.use("/api/enums", enumRoutes);
 app.use("/api/sellers", sellerRoutes);
 app.use("/api/incomes", incomeRoutes);
 app.use("/api/expenses", expenseRoutes);
+app.use("/api/employees", employeeRoutes);
 
 const PORT = process.env.PORT || 3000;
 
